--- a/package.json
+++ b/package.json
@@ -2,15 +2,20 @@
   "name": "tienda-web-lotoai",
   "version": "1.0.0",
   "scripts": {
-    "build": "ng build --configuration production",
-    "build:ssr": "ng build && ng build --ssr && node fix-build.js",
-    "build:server": "ng build --configuration production --ssr",
-    "build:backend": "cd src/backend && npm install --production=false && npm run build",
-    "serve:ssr": "node dist/tienda-web-loto-ai/server/main.server.mjs",
-    "serve:express": "node express-server.js",
+    "ng": "ng",
     "start": "ng serve",
-    "start:prod": "npm run serve:ssr",
-    "deploy:frontend": "bash scripts/deploy-frontend.sh"
+    "build": "ng build",
+    "build:prod": "ng build --configuration production",
+    "build:backend": "cd src/backend && npm run build",
+    "build:all": "npm run build:backend && npm run build:prod",
+    "watch": "ng build --watch --configuration development",
+    "test": "ng test",
+    "serve:ssr": "node dist/tienda-web-loto-ai/server/main.server.mjs",
+    "serve:ssr:dev": "node dist/tienda-web-loto-ai/server/main.server.mjs",
+    "build:ssr": "ng build && ng run tienda-web-loto-ai:server",
+    "serve:ssr:tienda-web-loto-ai": "node dist/tienda-web-loto-ai/server/main.server.mjs",
+    "prerender": "ng run tienda-web-loto-ai:prerender",
+    "build:scraper": "tsc -p tsconfig.scraper.json"
   },
   "dependencies": {
     "@angular/animations": "^18.2.12",
