CRITICAL: Optimizar workflows para evitar conflictos y proteger archivos críticos

--- a/.github/workflows/deploy-modified.yml
+++ b/.github/workflows/deploy-modified.yml
@@ -4,6 +4,11 @@ on:
   push:
     branches:
       - main
+    paths-ignore:
+      - 'IAs-Loto/**'
+      - 'ias/**'
+      - '*.md'
+      - 'README.md'
   workflow_dispatch:
 
 jobs:
