--- a/.github/workflows/deploy-with-ias.yml
+++ b/.github/workflows/deploy-with-ias.yml
@@ -30,26 +30,45 @@ jobs:
           git fetch origin
           
           # Hacer backup de archivos críticos antes del reset
-          cp server-ia-unificado.py server-ia-unificado.py.backup
-          cp ia-server-control.sh ia-server-control.sh.backup 2>/dev/null || true
-          cp server/controllers/webhook.controller.js server/controllers/webhook.controller.js.backup 2>/dev/null || true
+          echo "--- Respaldando archivos críticos ---"
+          
+          # Respaldar archivos de configuración
+          cp .env .env.backup 2>/dev/null || echo "⚠️ .env no encontrado para backup"
+          cp .env.production .env.production.backup 2>/dev/null || echo "⚠️ .env.production no encontrado para backup"
+          
+          # Respaldar archivos del servidor IA
+          cp server-ia-unificado.py server-ia-unificado.py.backup 2>/dev/null || echo "⚠️ server-ia-unificado.py (raíz) no encontrado para backup"
+          cp archivos-para-servidor/server-ia-unificado.py archivos-para-servidor/server-ia-unificado.py.backup 2>/dev/null || echo "⚠️ server-ia-unificado.py (archivos-para-servidor) no encontrado para backup"
+          
+          # Respaldar otros archivos críticos
+          cp ia-server-control.sh ia-server-control.sh.backup 2>/dev/null || echo "⚠️ ia-server-control.sh no encontrado para backup"
+          cp server/controllers/webhook.controller.js server/controllers/webhook.controller.js.backup 2>/dev/null || echo "⚠️ webhook.controller.js no encontrado para backup"
           
           # Respaldar archivos del scraper
           cp src/assets/botes.json src/assets/botes.json.backup 2>/dev/null || echo "⚠️ botes.json (src) no encontrado para backup"
           cp dist/tienda-web-loto-ai/browser/assets/botes.json dist/tienda-web-loto-ai/browser/assets/botes.json.backup 2>/dev/null || echo "⚠️ botes.json (dist) no encontrado para backup"
           
+          echo "--- Actualizando código ---"
           git reset --hard origin/main
           
-          # Restaurar archivos críticos si existen backups
-          [ -f server-ia-unificado.py.backup ] && cp server-ia-unificado.py.backup server-ia-unificado.py
-          [ -f ia-server-control.sh.backup ] && cp ia-server-control.sh.backup ia-server-control.sh
-          [ -f server/controllers/webhook.controller.js.backup ] && cp server/controllers/webhook.controller.js.backup server/controllers/webhook.controller.js
+          echo "--- Restaurando archivos críticos ---"
+          # Restaurar archivos de configuración
+          [ -f .env.backup ] && cp .env.backup .env && rm .env.backup && echo "✅ .env restaurado"
+          [ -f .env.production.backup ] && cp .env.production.backup .env.production && rm .env.production.backup && echo "✅ .env.production restaurado"
+          
+          # Restaurar archivos del servidor IA
+          [ -f server-ia-unificado.py.backup ] && cp server-ia-unificado.py.backup server-ia-unificado.py && rm server-ia-unificado.py.backup && echo "✅ server-ia-unificado.py (raíz) restaurado"
+          [ -f archivos-para-servidor/server-ia-unificado.py.backup ] && cp archivos-para-servidor/server-ia-unificado.py.backup archivos-para-servidor/server-ia-unificado.py && rm archivos-para-servidor/server-ia-unificado.py.backup && echo "✅ server-ia-unificado.py (archivos-para-servidor) restaurado"
+          
+          # Restaurar otros archivos críticos
+          [ -f ia-server-control.sh.backup ] && cp ia-server-control.sh.backup ia-server-control.sh && rm ia-server-control.sh.backup && echo "✅ ia-server-control.sh restaurado"
+          [ -f server/controllers/webhook.controller.js.backup ] && cp server/controllers/webhook.controller.js.backup server/controllers/webhook.controller.js && rm server/controllers/webhook.controller.js.backup && echo "✅ webhook.controller.js restaurado"
           
           # Restaurar archivos del scraper
-          [ -f src/assets/botes.json.backup ] && cp src/assets/botes.json.backup src/assets/botes.json && echo "✅ botes.json (src) restaurado"
-          [ -f dist/tienda-web-loto-ai/browser/assets/botes.json.backup ] && mkdir -p dist/tienda-web-loto-ai/browser/assets/ && cp dist/tienda-web-loto-ai/browser/assets/botes.json.backup dist/tienda-web-loto-ai/browser/assets/botes.json && echo "✅ botes.json (dist) restaurado"
+          [ -f src/assets/botes.json.backup ] && cp src/assets/botes.json.backup src/assets/botes.json && rm src/assets/botes.json.backup && echo "✅ botes.json (src) restaurado"
+          [ -f dist/tienda-web-loto-ai/browser/assets/botes.json.backup ] && mkdir -p dist/tienda-web-loto-ai/browser/assets/ && cp dist/tienda-web-loto-ai/browser/assets/botes.json.backup dist/tienda-web-loto-ai/browser/assets/botes.json && rm dist/tienda-web-loto-ai/browser/assets/botes.json.backup && echo "✅ botes.json (dist) restaurado"
 
-          echo "IAs actualizadas correctamente"
+          echo "✅ IAs actualizadas correctamente con archivos críticos protegidos"
 
     - name: Deployment success notification
       if: success()
