fix: Corregir configuración TypeScript y imports del backend

--- a/src/backend/tsconfig.backend.json
+++ b/src/backend/tsconfig.backend.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "module": "commonjs",
     "target": "es2020",
-    "outDir": "../../dist/backend",
+    "outDir": "./dist",
     "rootDir": "./src",
     "strict": true,
     "esModuleInterop": true,
