--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
     "ngx-bootstrap": "^18.1.3",
     "node-mailjet": "^6.0.5",
     "pg": "^8.12.0",
+    "proxy-chain": "^2.5.9",
+    "puppeteer": "^24.15.0",
+    "random-useragent": "^0.5.0",
     "rxjs": "^7.8.1",
     "stripe": "^17.7.0",
     "three": "^0.177.0",
