--- a/.github/workflows/deploy-modified.yml
+++ b/.github/workflows/deploy-modified.yml
@@ -56,6 +56,12 @@ jobs:
             else
               echo "⚠️  Archivo src/assets/lottery-data.json no encontrado para respaldar"
             fi
+            if [ -f "scraper/scraper.ts" ]; then
+              cp scraper/scraper.ts scraper/scraper.ts.backup
+              echo "✅ Archivo scraper.ts respaldado"
+            else
+              echo "⚠️  Archivo scraper/scraper.ts no encontrado para respaldar"
+            fi
             if [ -f "dist/tienda-web-loto-ai/browser/assets/botes.json" ]; then
               # Crear directorio temporal para respaldos fuera de dist/
               mkdir -p .deploy-backups
@@ -121,6 +127,13 @@ jobs:
               echo "✅ Archivo lottery-data.json (src) restaurado con datos actualizados del scraper"
             else
               echo "❌ No se pudo restaurar lottery-data.json (src) - archivo de respaldo no encontrado"
+            fi
+            if [ -f "scraper/scraper.ts.backup" ]; then
+              cp scraper/scraper.ts.backup scraper/scraper.ts
+              rm scraper/scraper.ts.backup
+              echo "✅ Archivo scraper.ts restaurado con modificaciones del servidor"
+            else
+              echo "❌ No se pudo restaurar scraper.ts - archivo de respaldo no encontrado"
             fi
             if [ -f ".deploy-backups/botes.json.backup" ]; then
               # Crear directorio si no existe
